# penny

./: .env.example  .gitignore  PENNY_REPORT.md  README.md  coverage.md  pyproject.toml
next-vuln-fixture/: README.md  package-lock.json  package.json
next-vuln-fixture/app/: layout.tsx  page.tsx
next-vuln-fixture/lib/: db.ts  session.ts
penny/: __init__.py  active.py  advisories.py  agent_fix.py  agentic.py  ai_review.py  api_probes.py  ask.py  browser.py  bruteforce.py  cli.py  cloud.py  cloud_attacks.py  completions.py  detectors.py  embeddings.py  exports.py  feed.py  github_fix.py  guardrails.py  handoff.py  injection.py  live.py  llm.py  loadtest.py  mcp.py  models.py  mongo.py  netscan.py  patches.py  probes.py  redaction.py  repl.py  repl_input.py  replay.py  repo.py  reporting.py  sandbox.py  sandbox_agent.py  scanner.py  (+8 more)
planted-app/: README.md
planted-app/frontend/: package.json
tests/: conftest.py  test_active.py  test_advisories.py  test_ai_review.py  test_api_probes.py  test_bruteforce.py  test_cli.py  test_cli_url_input.py  test_completions.py  test_detectors.py  test_exports.py  test_firebase.py  test_guardrails.py  test_handoff.py  test_injection.py  test_integration.py  test_live.py  test_llm.py  test_loadtest.py  test_mcp.py  test_mongo.py  test_netscan.py  test_patches.py  test_redaction.py  test_repl.py  test_repl_live_ui.py  test_replay.py  test_repo.py  test_report_provenance.py  test_sandbox.py  test_scanner.py  test_schema_store.py  test_sources.py  test_ssrf.py  test_templates.py  test_transport.py  test_writes.py
(+10 files in other folders)
