[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "penny"
version = "0.1.0"
description = "Demo-first Python CLI penetration-testing assistant for AI-built apps."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
mongo = ["pymongo>=4.7"]
dev = ["pytest>=8.0"]

[project.scripts]
penny = "penny.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
